@@ -18,33 +18,46 @@ package com.echothree.control.user.item.server.command;
 
 import com.echothree.control.user.item.common.form.DeleteItemVolumeForm;
 import com.echothree.model.control.item.server.control.ItemControl;
+import com.echothree.model.control.item.server.logic.ItemVolumeTypeLogic;
+import com.echothree.model.control.party.common.PartyTypes;
+import com.echothree.model.control.security.common.SecurityRoleGroups;
+import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.uom.server.control.UomControl;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.CommandSecurityDefinition;
+import com.echothree.util.server.control.PartyTypeDefinition;
+import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class DeleteItemVolumeCommand
         extends BaseSimpleCommand<DeleteItemVolumeForm> {
-    
+
+    private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-            new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
-            new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, true, null, null)
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.ItemVolume.name(), SecurityRoles.Delete.name())
+                ))
         ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("ItemName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("UnitOfMeasureTypeName", FieldType.ENTITY_NAME, true, null, null),
+                new FieldDefinition("ItemVolumeTypeName", FieldType.ENTITY_NAME, true, null, null)
+        );
     }
     
     /** Creates a new instance of DeleteItemVolumeCommand */
     public DeleteItemVolumeCommand() {
-        super(null, FORM_FIELD_DEFINITIONS, false);
+        super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, false);
     }
     
     @Override
@@ -60,12 +73,16 @@ public class DeleteItemVolumeCommand
                     unitOfMeasureTypeName);
             
             if(unitOfMeasureType != null) {
-                var itemVolume = itemControl.getItemVolumeForUpdate(item, unitOfMeasureType);
-                
-                if(itemVolume != null) {
-                    itemControl.deleteItemVolume(itemVolume, getPartyPK());
-                } else {
-                    addExecutionError(ExecutionErrors.UnknownItemVolume.name());
+                var itemVolumeType = ItemVolumeTypeLogic.getInstance().getItemVolumeTypeByName(this, form.getItemVolumeTypeName());
+
+                if(!hasExecutionErrors()) {
+                    var itemVolume = itemControl.getItemVolumeForUpdate(item, unitOfMeasureType, itemVolumeType);
+
+                    if(itemVolume != null) {
+                        itemControl.deleteItemVolume(itemVolume, getPartyPK());
+                    } else {
+                        addExecutionError(ExecutionErrors.UnknownItemVolume.name());
+                    }
                 }
             } else {
                 addExecutionError(ExecutionErrors.UnknownUnitOfMeasureTypeName.name(), unitOfMeasureTypeName);
